--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
-Flask==2.3.3
-Flask-CORS==4.0.0
-gunicorn==21.2.0
-pandas==2.0.3
-joblib==1.3.2
-numpy==1.24.3
-scikit-learn==1.3.0
+Flask
+Flask-CORS
+gunicorn
+pandas
+joblib
+numpy
+scikit-learn
